[project]
name = "cn2025-quantum"
version = "0.3.01"
dependencies=[
"sequence"
]
authors = [
  { name="satislugcat", email="aniket.mishra@iitgn.ac.in" },
]
description = "A package with implementations and tests for Quantum Routing algorithms."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[tool.setuptools]
packages = ['cn2025-quantum']
[project.urls]
Homepage = "https://github.com/satiscugcat/cn2025-quantum"
Issues = "https://github.com/satiscugcat/cn2025-quantum/issues"
[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"